added offset limit
